--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	"name": "learning_math",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"build": {
-    	"dockerfile": "../Dockerfile"
+    	"dockerfile": "Dockerfile"
   	},
 	"runArgs": ["--gpus", "all"],
 
@@ -26,7 +26,7 @@
 				"GitHub.github-vscode-theme"
 			]
 		}
-	}
+	},
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [9000],
@@ -40,7 +40,7 @@
 	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip3 install -r requirements.txt"
+	"postCreateCommand": "pip install -r requirements.txt"
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
